--- a/src/components/Counter.module.css
+++ b/src/components/Counter.module.css
@@ -16,8 +16,9 @@
 }
 
 .value {
-  font-size: 2rem;
+  font-size: 1rem;
   color: #3c0080;
-  margin: 2rem 0;
+  margin: 2rem;
+  padding: 10px;
   font-weight: bold;
 }
